# german-tts

./: .pre-commit-config.yaml  README.md  mms-tts-deu.ipynb  pyproject.toml  requirements.txt  tts_voxpopuli.ipynb  tts_voxpopuli.py
.github/workflows/: ci.yml
