[project]
name = "german-tts"
version = "1.0.0"
description = "This project fine-tunes Microsoft's SpeechT5 model for German Text-to-Speech  using the VoxPopuli dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets==3.6.0",
    "ipykernel>=7.0.1",
    "soundfile>=0.13.1",
    "speechbrain>=1.0.3",
    "timm>=1.0.20",
    "transformers>=4.57.1",
    "wandb>=0.22.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
